--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         <h1 class="text-center">Nhận diện chữ cái bằng cử chỉ tay</h1>
         <div class="container d-flex justify-content-center">
             
-            <img id="video_feed" src="{{ url_for('video_feed') }}" width="640" height="480">
+            <img src="{{ url_for('image_feed') }}">
             
         </div>
 
